8286707: JFR: Don't commit JFR internal jdk.JavaMonitorWait events