src/hotspot/share/jfr/support/jfrIntrinsics.hpp
@@ -37,6 +37,7 @@
   template(jdk_jfr_internal_JVM,                                      "jdk/jfr/internal/JVM")                     \
   template(jdk_jfr_internal_handlers_EventHandler_signature,          "Ljdk/jfr/internal/handlers/EventHandler;") \
   template(eventHandler_name,                                         "eventHandler")                             \
+  template(jfr_chunk_rotation_monitor,                                "jdk/jfr/internal/JVM$ChunkRotationMonitor")   \
 
 #define JFR_INTRINSICS(do_intrinsic, do_class, do_name, do_signature, do_alias)                              \
   do_intrinsic(_counterTime,        jdk_jfr_internal_JVM, counterTime_name, void_long_signature, F_SN)       \
